# aether-engine-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-all.js  install.js  uninstall.js
src/: Cargo.toml  api.rs  builder.rs  commands.rs  lib.rs  pokemon_widgets.rs  presigned_uploader.rs  s3_uploader.rs  terminal_dashboard.rs  utils.rs
src/src/: config.rs  dashboard.rs  error.rs  main.rs  pokemon_theme.rs  presigned_uploader.rs  s3_uploader.rs
