[package]
name = "aether-cli"
version = "1.2.0"
edition = "2021"
authors = ["secus217"]
description = "Aether Engine CLI - A powerful CLI tool for deploying and managing applications"
license = "MIT"
repository = "https://github.com/secus217/aether-engine-cli"
keywords = ["cli", "deployment", "kubernetes", "rust", "aether"]

[lib]
name = "aether_cli"
path = "src/lib.rs"

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "std", "clock"] }
flate2 = "1.0"
tar = "0.4"
rpassword = "7.3"

# CLI specific dependencies
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
crossterm = "0.27"
ratatui = { version = "0.28", features = ["all-widgets"] }
tokio-util = "0.7"
dirs = "5.0"

# Pokemon-themed UI enhancements
unicode-width = "0.1"
unicode-segmentation = "1.10"
palette = "0.7"
rand = "0.8"

# Enhanced terminal effects
termcolor = "1.4"
colored = "2.0"

# Animation and timing
futures = "0.3"
instant = "0.1"

# Audio (optional for sound effects)
rodio = { version = "0.17", optional = true }

# AWS S3 dependencies  
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aws-types = "1.1"

# OpenSSL
openssl = { version = "0.10", optional = true }

# Environment variables
dotenvy = "0.15"

[features]
default = []
sound = ["rodio"]
vendored-openssl = ["openssl/vendored"]
