[package]
name = "aether-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "aether_cli"
path = "src/lib.rs"

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
rpassword = "7.3"

# CLI specific dependencies
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
crossterm = "0.27"
ratatui = { version = "0.28", features = ["all-widgets"] }
tokio-util = "0.7"
dirs = "5.0"

# Pokemon-themed UI enhancements
unicode-width = "0.1"
unicode-segmentation = "1.10"
palette = "0.7"
rand = "0.8"

# Enhanced terminal effects
termcolor = "1.4"
colored = "2.0"

# Animation and timing
futures = "0.3"
instant = "0.1"

# Audio (optional for sound effects)
rodio = { version = "0.17", optional = true }

# AWS S3 dependencies  
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aws-types = "1.1"

# Environment variables
dotenvy = "0.15"

[features]
default = []
audio = ["rodio"]